--- a/418 I'm a Teapot/.htaccess
+++ b/418 I'm a Teapot/.htaccess
@@ -81,5 +81,78 @@
     RewriteRule ^modules(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^build(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^static/wagtailadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^program(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^sql(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^sqlmanager(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^_phpmyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^_phpMyAdmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^__phpmyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^_phpMyAdmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^_phpmyadmin_(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyAdmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin_(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin_(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmy-admin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^php-myadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^php-my-admin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^1phpmyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin1(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin1(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^2phpmyadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin2(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin3(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin3(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-3(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin4(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin4(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-4(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-4.9.7(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-4.9.10-all-languages(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin5(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin5(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin5.1(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.1.0(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.1.1(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.1.2(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.1.3(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin5.2(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2.0(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2.0-all-languages(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2.1(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2.1-all-languages(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-5.2.1-english(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin6(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin6(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin6.0(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2017(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2018(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2019(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2020(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2021(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyadmin2022(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-latest(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpMyAdmin-latest-english(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmyAdmin-latest-all-languages(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phpmy(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^pma(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^PMA(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^phppma(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^db(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^dbadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^mysql(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^mysqladmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^mysql-admin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^myadmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^MyAdmin(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^database(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^mysqlmanager(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^shopdb(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^ecp(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^v2/_catalog(?:/(.*))?$ /teapot.php [R=301,L]
     
 </IfModule>
