--- a/418 I'm a Teapot/.htaccess
+++ b/418 I'm a Teapot/.htaccess
@@ -19,6 +19,15 @@
     RewriteRule ^wp-pano(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^wp-admin(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^.*wp(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^wp-plain.php(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^.ssh(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^defaults.php(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^config.xml(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^config.yml(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^config.json(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^config.php(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^backup.zip(?:/(.*))?$ /teapot.php [R=301,L]
+    RewriteRule ^backup.tar.gz(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^vendor(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^public/plugins(?:/(.*))?$ /teapot.php [R=301,L]
     RewriteRule ^magento(?:/(.*))?$ /teapot.php [R=301,L]
